5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1643_1053.log
== TEST (2019-04-10 01:31:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite o nome: "))

if ("cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("Impar")

-- ERROR:
File "XXXX", line 4
    patrono = input())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:32:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite o nome: ")

if ("cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("Impar")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:33:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome: ")

if ("cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<nome> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:33:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome: ")

if ("cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<nome> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:34:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome: ")

if (nome == cervo) : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<nome> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (nome == cervo) : 
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:34:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if (patrono == cervo) : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<nome> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (patrono == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:35:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if (patrono == cervo) : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (patrono == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:35:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if (cervo) : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:35:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:36:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:46:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("patrono == cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:46:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("patrono == cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:46:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("patrono == cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:47:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("patrono == cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:48:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("patrono != cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:50:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("patrono == cervo") : 
	print("cervo eh patrono do Harry Potter")
if ("patrono != cervo")
	print("<patrono> nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 8
    if ("patrono != cervo")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:50:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("patrono == cervo") : 
	print("cervo eh patrono do Harry Potter")
if ("patrono != cervo")
	print("<patrono> nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 8
    if ("patrono != cervo")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:50:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("patrono == cervo") : 
	print("cervo eh patrono do Harry Potter")
if ("patrono != cervo") :
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
<patrono> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:51:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("patrono: ")

if ("patrono") : 
	print("cervo eh patrono do Harry Potter")
if ("patrono != cervo") :
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
<patrono> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:03:56) 
-- CODE:
patrono = input("animal: ")

if (animal == cervo) : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<animal> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (animal == cervo) : 
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:04:20) 
-- CODE:
patrono = input("patrono: ")

if (patrono == cervo) : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<animal> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (patrono == cervo) : 
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:04:35) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<animal> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:04:43) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<animal> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:04:49) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<animal> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:05:04) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:05:11) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.227749
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<patrono> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:05:17) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:05:45) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:05:59) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.20019
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
patrono nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:06:38) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:07:10) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<entrada> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:07:17) 
-- CODE:
patrono = input("patrono: ")

if (patrono == "cervo") : 
	print("cervo eh patrono do Harry Potter")
else:
	print("<entrada> nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.206498
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<entrada> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:25:32) 
-- CODE:
patrono = input("nome do animal:")

if (nome do animal == cervo):

-- ERROR:
File "XXXX", line 3
    if (nome do animal == cervo):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:26:21) 
-- CODE:
patrono = input("nome do animal:")

if (nome do animal == cervo):
	print("cervo eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 3
    if (nome do animal == cervo):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:27:09) 
-- CODE:
patrono = input("nome do animal:")

if (nome do animal == cervo):
	print("cervo eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 3
    if (nome do animal == cervo):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:27:19) 
-- CODE:
patrono = input("nome do animal:")

if (nome do animal==cervo):
	print("cervo eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 3
    if (nome do animal==cervo):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:27:36) 
-- CODE:
patrono = input("nome do animal:")

if (patrono = cervo):
	print("cervo eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 3
    if (patrono = cervo):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:28:29) 
-- CODE:
patrono = input("patrono: ")
if(patrono == cervo)
	print("cervo eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(patrono == cervo)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:28:43) 
-- CODE:
patrono = input("patrono: ")
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:29:28) 
-- CODE:
patrono = input("patrono: ")
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono nao eh patrono do Harry Potter)

-- ERROR:
File "XXXX", line 5
    print(patrono nao eh patrono do Harry Potter)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:29:41) 
-- CODE:
patrono = input("patrono: ")
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:30:00) 
-- CODE:
patrono = input("patrono: ")
patrono = cervo
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    patrono = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:30:23) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:30:31) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:31:04) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
gato != patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    gato != patrono
NameError: name 'gato' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:31:53) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else (patrono != cervo)
	print("patrono nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 5
    else (patrono != cervo)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:32:01) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else (patrono != cervo):
	print("patrono nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 5
    else (patrono != cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:33:23) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else (patrono !== cervo):
	print("patrono nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 5
    else (patrono !== cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:34:06) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
if (patrono != cervo):
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:34:14) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
if (patrono != cervo):
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 03:34:22) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
if (patrono != cervo):
	print("patrono nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.189731
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:02:07) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:02:15) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 04:02:22) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.136818
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:02:29) 
-- CODE:
patrono = input("patrono: ")
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:50:10) 
-- CODE:
patrono = input("patrono: ")
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:50:45) 
-- CODE:
patrono = input("patrono: ")
patrono = cervo
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    patrono = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:51:06) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:51:15) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 20:51:24) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("patrono nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.159151
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:52:06) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:52:12) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 20:52:18) 
-- CODE:
patrono = input("patrono: ")
cervo = patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.135752
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:56:54) 
-- CODE:
patrono = input("patrono: ")
cervo =  patrono
if(patrono == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:58:00) 
-- CODE:
patrono = input("patrono: ")
patrono = aniaml
if(animal == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    patrono = aniaml
NameError: name 'aniaml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:58:32) 
-- CODE:
patrono = input("patrono: ")
patrono = aniamal
if(animal == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    patrono = aniamal
NameError: name 'aniamal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:59:35) 
-- CODE:
patrono = input("patrono: ")
patrono = animal
if(animal == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    patrono = animal
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:59:59) 
-- CODE:
patrono = input("patrono: ")
animal = patrono
if(animal == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(animal == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:00:12) 
-- CODE:
patrono = input("patrono: ")
animal = cervo
if(animal == cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    animal = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:02:14) 
-- CODE:
patrono = input("patrono: ")
a = ("cervo")
if(patrono == a):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:02:21) 
-- CODE:
patrono = input("patrono: ")
a = ("cervo")
if(patrono == a):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:02:32) 
-- CODE:
patrono = input("patrono: ")
a = ("cervo")
if(patrono == a):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:02:42) 
-- CODE:
patrono = input("patrono: ")
a = ("cervo")
if(patrono == a):
	print("cervo eh patrono do Harry Potter")
else:
	print("<patrono> nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.21836
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<patrono> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:03:27) 
-- CODE:
patrono = input("patrono: ")
a = ("cervo")
if(patrono == a):
	print("cervo eh patrono do Harry Potter")
else:
	print(<patrono>, "nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 6
    print(<patrono>, "nao eh patrono do Harry Potter")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:03:36) 
-- CODE:
patrono = input("patrono: ")
a = ("cervo")
if(patrono == a):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono do Harry Potter")

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:03:43) 
-- CODE:
patrono = input("patrono: ")
a = ("cervo")
if(patrono == a):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.190544
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
